--- a/homework.ipynb
+++ b/homework.ipynb
@@ -294,7 +294,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 98,
       "metadata": {
         "id": "nhdirreg1pyy"
       },
@@ -302,21 +302,21 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p1 = len(mango_data.columns) - 1"
+        "p1 = len(mango_data.columns)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 99,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "6"
+              "7"
             ]
           },
-          "execution_count": 14,
+          "execution_count": 99,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -734,7 +734,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 100,
       "metadata": {
         "id": "0R8DkzA7bEJQ"
       },
@@ -754,16 +754,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 101,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "5"
+              "7"
             ]
           },
-          "execution_count": 54,
+          "execution_count": 101,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1479,7 +1479,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": 103,
       "metadata": {
         "id": "E8cvcltFq4wn"
       },
@@ -1487,7 +1487,7 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p18 = 2.5"
+        "p18 = 2"
       ]
     },
     {
